// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ap component should render when it is not part of the assignment flow 1`] = `
<Ap>
  <div
    className="pre-ap-container"
  >
    <div
      className="section-wrapper"
    >
      <div
        className="container pre-ap-header-container"
      >
        <div
          className="header-left"
        >
          <div
            className="logo-container"
          >
            <img
              alt="College Board logo"
              src="https://assets.quill.org/images/college_board/college-board-logo.svg"
            />
            <div
              className="divider"
            />
            <img
              alt="Quill logo"
              src="https://assets.quill.org/images/logos/quill-logo-green.svg"
            />
          </div>
          <div
            className="header-text-container"
          >
            <h1>
              Official AP Writing Practice
            </h1>
            <p>
              Free AP® writing practice with comprehensive progress reports for you and immediate feedback for students that guides them towards mastery of sentence-level skills.
            </p>
            <a
              className="quill-button large primary contained focus-on-light"
              href="https://www.quill.org/account/new"
              rel="noopener noreferrer"
              target="_blank"
            >
              Get started
            </a>
          </div>
        </div>
        <img
          alt="Photograph of a teacher talking to a classroom of high school students"
          src="https://assets.quill.org/images/college_board/teaching-english-practice.png"
        />
      </div>
    </div>
    <div
      className="white-section-wrapper"
    >
      <div
        className="container pre-ap-activities-section"
      >
        <div
          className="header"
        >
          <img
            alt="Illustration of a pencil drawing a line"
            src="https://assets.quill.org/images/college_board/sentence-writing-pencil.svg"
          />
          <div
            className="text-container"
          >
            <h2>
              Sentence-Level Writing Practice
            </h2>
            <p>
              Identify which sentence-level skills your students need to practice with the AP Writing Skills Surveys. Then, assign activities recommended for each student based on their survey responses so they can practice and improve their proficiency with those skills.
            </p>
          </div>
        </div>
        <div
          className="activities-subheader"
        >
          <h2>
            AP Writing Skills Surveys
          </h2>
          <div
            className="ap-english-tag"
          >
            For All AP students
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <a
              className="activity-header"
              id="writing-skills-survey"
            >
              AP Writing Skills Survey
            </a>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/activities/packs/193"
              rel="noopener noreferrer"
              target="_blank"
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a seventeen-item survey to gauge their understanding of key writing skills that are essential to successful AP- and SAT-level writing. After students complete the survey, Quill will automatically recommend up to seven activity packs for each student based on their needs. Each pack contains a series of activities that each take about 15 minutes to complete and provide scaffolded, sequenced practice with one of the skills covered by the survey.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Complex Sentences; relative clauses; appositive phrases; participial phrases; parallel structure; compound-complex sentences; advanced combining
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="white-section-wrapper"
      id="info-blurbs-1-wrapper"
    >
      <div
        className="container info-blurbs-section"
      >
        <div
          className="info-blurb-container"
        >
          <img
            alt="A recommended activity pack report showing four students being recommended a mixture of activities for relative clauses and participial phrases."
            src="https://assets.quill.org/images/college_board/ap-recommendations.svg"
          />
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Personalized Recommendations
            </p>
            <p
              className="info-blurb-text"
            >
              After students complete the AP Writing Skills Survey, you'll receive recommendations for each student based on their responses and tailored to their individual needs. Each student will be recommended up to 45 sentence combining activities, grouped by concept into seven packs, that provide meaningful, targeted practice. You can assign all the activities with one click, or you can pick and choose.
            </p>
          </div>
        </div>
        <div
          className="info-blurb-container"
        >
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Writing with Targeted Feedback
            </p>
            <p
              className="info-blurb-text"
            >
              Students receive immediate feedback that guides them through the revision process, pushing them to think critically about their writing and make revisions that ultimately lead to strong, sophisticated, and grammatically accurate sentences. The feedback inspires students to strengthen their sentence structure, but also supports them in editing for mechanics such as punctuation and spelling.
            </p>
          </div>
          <img
            alt="An illustration showing a student combining two sentences, getting feedback from Quill, and then getting a correct response."
            src="https://assets.quill.org/images/college_board/ap-additional-practice.svg"
          />
        </div>
        <div
          className="info-blurb-container"
        >
          <img
            alt="A report showing that a student scored 79% on parallel structure, 98% on parallel structure with joining words, and 58% on advanced parallel structure."
            src="https://assets.quill.org/images/college_board/ap-reports.svg"
          />
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Data Reports
            </p>
            <p
              className="info-blurb-text"
            >
              You can monitor the progress of your students and continue to identify areas of need and areas of strength through multiple data reports. Use the analysis report to review your students' work sentence-by-sentence, or use the summary report to get a high-level sense of where your students could use some extra support.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="section-wrapper"
    >
      <div
        className="container cb-message-container"
      >
        <p
          className="cb-message-header"
        >
          Quill and College Board have partnered to provide students with meaningful practice of their sentence-level writing skills.
        </p>
        <div
          className="sub-header-container"
        >
          <p
            className="cb-message-sub-header"
          >
            Message from College Board
          </p>
        </div>
        <div
          className="quote-container"
        >
          <img
            id="first-quote"
            src="https://assets.quill.org/images/college_board/exaggerated-quote-left.svg"
          />
          <div
            className="inner-text-container"
          >
            <p>
              Teaching writing is hard. Even harder can be attempting to pinpoint exactly when we learned how and why to write clearly. That’s why the College Board has worked with Quill.org to ensure that this new, free, comprehensive offering helps students practice targeted sentence construction skills in their writing. Sustained practice and exposure to targeted skills is important to improvement and comfort.
            </p>
            <p>
              Teaching writing may always be hard, but student practice in meaningful skills can make the learning that much clearer. Through this practice, students can begin to own the how and why of their writing.
            </p>
          </div>
          <img
            id="second-quote"
            src="https://assets.quill.org/images/college_board/exaggerated-quote-right.svg"
          />
        </div>
      </div>
    </div>
    <QuestionsAndAnswers
      questionsAndAnswersFile="ap"
      supportLink=""
    >
      <div
        id="q-and-a"
      >
        <div
          className="q-and-a-inner-wrapper"
        >
          <h1>
            Questions and Answers
          </h1>
          <QuestionAndAnswer
            key="0"
            qa={
              Object {
                "answer": <p>
                  The AP Writing Skills Survey is a survey with 17 questions on a range of writing skills. The questions ask students to combine sentences, sometimes with a direction to use a specific strategy, and sometimes without any direction (other than to combine).
                </p>,
                "question": "What is the AP Writing Skills Survey?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What is the AP Writing Skills Survey?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="1"
            qa={
              Object {
                "answer": <p>
                  The Survey assesses students’ proficiency in constructing sentences with relative clauses, appositive phrases, participial phrases, and parallel structure, as well as their general ability to do advanced sentence combining, and to write complex and compound-complex sentences.
                </p>,
                "question": "What does the Survey assess?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What does the Survey assess?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="2"
            qa={
              Object {
                "answer": <p
                  className="preap-q-and-a-text"
                >
                  Quill.org worked with the 
                  <a
                    href="https://www.collegeboard.org/"
                  >
                    College Board
                  </a>
                   to develop this Survey and the AP Writing Practice activity packs that will be recommended based on your students' performance.
                </p>,
                "question": "Who developed the AP Writing Skills Survey?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Who developed the AP Writing Skills Survey?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="3"
            qa={
              Object {
                "answer": <p>
                  The Survey was designed for students in 
                  <a
                    href="https://apcentral.collegeboard.org/courses/ap-course-audit/explore-by-role/teachers"
                  >
                    Advanced Placement
                  </a>
                   courses. Please note, however, that students' performance on the Survey will only be recorded if it is assigned to them by their teacher.
                </p>,
                "question": "Who is the Survey for?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Who is the Survey for?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="4"
            qa={
              Object {
                "answer": <p>
                  The Survey contains 17 questions and is designed to take about 30 minutes for students to complete.
                </p>,
                "question": "How long does the Survey take?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  How long does the Survey take?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="5"
            qa={
              Object {
                "answer": <p>
                  After you have assigned the Survey and your students have completed it, Quill will show you how your students performed and provide recommendations of personalized practice activities you can digitally assign to students who need further skill development. 
                  <a
                    href="https://support.quill.org/en/articles/1589522-how-do-i-assign-diagnostic-recommendations"
                  >
                    This article
                  </a>
                   explains how to find and assign those recommendations.
                </p>,
                "question": "What happens after I assign the Survey and my students complete it?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What happens after I assign the Survey and my students complete it?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="6"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Depending on their performance, students will be recommended some or all of the following AP Writing Practice packs. The packs provide practice through 
                    <a
                      href="https://www.quill.org/tools/connect"
                    >
                      Quill Connect
                    </a>
                    , 
                    <a
                      href="https://www.quill.org/teacher-center/-3"
                    >
                      Quill's sentence combining tool
                    </a>
                    . With the exception of the 
                    <a
                      href="https://www.quill.org/activities/packs/142"
                    >
                      AP Writing - Advanced Sentence Combining pack
                    </a>
                    , the activities in each pack are scaffolded to build in complexity. Here are descriptions of the packs:
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/139"
                    >
                      Complex Sentences
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice constructing complex sentences using subordinating conjunctions, such as even though, after, while, and because. Students also practice identifying time order, opposition, and cause/effect relationships.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/140"
                    >
                      Relative Clauses
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students begin by using a provided relative pronoun, then progress to choosing between who, that, or which.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/143"
                    >
                      Appositive Phrases
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice describing nouns using appositive phrases at the beginning, middle, and end of sentences.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/144"
                    >
                      Participial Phrases
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice constructing sentences with -ing and -ed participial phrases at the beginning, middle, or end.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/192"
                    >
                      Parallel Structure
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice constructing sentences in parallel structure with correlative conjunctions like either/or, neither/nor, and both/and, and with subordinating conjunctions like although, because, and when. Students also practice constructing sentences with parallel clauses.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/141"
                    >
                      Compound-Complex Sentences
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice constructing compound sentences with and, or, but, and so. Students also practice constructing complex sentences with subordinating conjunctions such as even though, after, while, and because. Finally, students practice constructing compound-complex sentences with coordinating and subordinating conjunctions. Students also practice identifying time order, opposition, and cause/effect relationships.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/142"
                    >
                      Advanced Combining
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students apply their knowledge of multiple sentence structures to combine the sentences in the strongest way possible. Students practice constructing compound and complex sentences, using modifying phrases and clauses, and combining predicates.
                  </p>
                </div>,
                "question": "What kind of activities will be recommended to my students after they take the AP Writing Skills Survey?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What kind of activities will be recommended to my students after they take the AP Writing Skills Survey?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="7"
            qa={
              Object {
                "answer": <p>
                  Yes! From anywhere and at any time! Again though, please note that recommendations of the AP Writing Packs are generated after students complete the AP Writing Skills Survey. Please also note that students' performance on the AP Writing Practice packs will only be recorded if they are assigned to them by their teacher.
                </p>,
                "question": "Can students complete the AP Writing Practice packs independently?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Can students complete the AP Writing Practice packs independently?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="8"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    All of the above packs contain between 4 and 7 activities, each of which are designed to take between 10 and 15 minutes each.
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    The only exception is the 
                    <a
                      href="https://www.quill.org/activities/packs/142"
                    >
                      AP Writing - Advanced Combining pack
                    </a>
                    , which contains 15 activities. This pack contains more activities than the others as it was designed to serve as a large bank of activities for students who perform well on the Survey and don’t get a lot of recommendations. This way, you can still assign these students activities, which are quite challenging and will sustain them for a while. These are great for students who have had success with individual practice of strategies covered in the Survey, and would benefit from an opportunity to apply those strategies in combining activities without suggestions or direction.
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Teacher Tip: When you select a recommended pack, you can 
                    <a
                      href="https://support.quill.org/en/articles/1137376-can-i-remove-activities-or-assignments-from-my-activity-packs"
                    >
                      remove any activities within it
                    </a>
                    . And once it's assigned, you can add activities to the pack as well.
                  </p>
                </div>,
                "question": "How many activities are in each AP Writing Practice pack and how long will it take students to complete them?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  How many activities are in each AP Writing Practice pack and how long will it take students to complete them?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="9"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    The focus in most of these activities is to build the target skill of the pack (appositives, relative clauses, etc.), so the vocabulary and reading level are intentionally designed to be accessible by all students.
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Teacher Tip: You can preview and play through any pack and its activities to get a sense of whether it's appropriate for your students.
                  </p>
                </div>,
                "question": "What grade-level or reading level are the AP Activity Packs designed for?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What grade-level or reading level are the AP Activity Packs designed for?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="10"
            qa={
              Object {
                "answer": "Yes! In each recommended practice activity, Quill provides students with immediate feedback on their writing that they can use to revise their responses up to 5 times. Through these rounds of feedback and revision, students improve the clarity and precision of their writing.",
                "question": "Will my students receive feedback as they work through the AP Writing Practice activity packs?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Will my students receive feedback as they work through the AP Writing Practice activity packs?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="11"
            qa={
              Object {
                "answer": <p>
                  Quill has a variety of reports to help you track your students' performance and progress. In the 
                  <a
                    href="https://support.quill.org/en/articles/1140159-how-does-the-activity-summary-work"
                  >
                    Activity Summary report
                  </a>
                  , you can quickly see which activities your students have completed, along with color-coded icons indicating their proficiency with each activity. Quill has several other reports as well. 
                  <a
                    href="http://s3.amazonaws.com/quill-image-uploads/uploads/files/Quill_Reports_Cheat_Sheet_Updated04_08_20.pdf"
                  >
                    This Cheat Sheet
                  </a>
                   shows you which report to go to for particular information, and 
                  <a
                    href="http://s3.amazonaws.com/quill-image-uploads/uploads/files/Getting_Started_-_Student_Data_Reports__Basic_.mp4"
                  >
                    this video
                  </a>
                   will walk you through interpreting and utilizing three of Quill's student data reports.
                </p>,
                "question": "Where can I track my students' completion of and performance on the AP Writing Practice packs?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Where can I track my students' completion of and performance on the AP Writing Practice packs?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="12"
            qa={
              Object {
                "answer": <p>
                  You can assign all the recommended practice at once, or you can pick and choose the ones that best fit your instructional and students’ needs. Since most of the AP Writing Practice packs contain between 4 and 7 activities, we suggest expecting students to complete about 1 pack a week. 
                  <a
                    href="https://support.quill.org/en/articles/1065187-how-can-i-assign-activities-in-a-specific-order"
                  >
                    This article
                  </a>
                   explains how you can use deadlines to help students pace themselves.
                </p>,
                "question": "How many AP Writing Practice packs should I assign to my students?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  How many AP Writing Practice packs should I assign to my students?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="13"
            qa={
              Object {
                "answer": <p>
                  The activities in the AP Writing Practice packs are curated from existing Quill activities. While your students may encounter an activity they have already completed, the AP Writing Practice packs have been customized to target the skills students need to write successfully at the AP level. Given the quantity and variety of activities available on Quill, chances are that the AP Writing Practice packs will include plenty of new activities, even for students who have been using Quill for a while.
                </p>,
                "question": "If my students have been using Quill for a while, will they encounter activities in the AP Writing Practice packs that they have completed before?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  If my students have been using Quill for a while, will they encounter activities in the AP Writing Practice packs that they have completed before?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="14"
            qa={
              Object {
                "answer": <p>
                  Yes! Quill offers 
                  <a
                    href="https://support.quill.org/en/articles/1327607-what-are-each-of-the-different-quill-tools"
                  >
                    5 different tools
                  </a>
                   with more than 600 writing, grammar, and proofreading activities designed to engage students in the writing process. 
                  <a
                    href="https://support.quill.org/en/articles/1049944-how-do-i-assign-a-featured-activity-pack"
                  >
                    This article
                  </a>
                   will show you how to explore and assign Quill’s featured activity packs, and 
                  <a
                    href="https://support.quill.org/en/articles/1049954-how-do-i-create-and-assign-a-new-activity-pack"
                  >
                    this article
                  </a>
                   will show you how to create a custom activity pack.
                </p>,
                "question": "Can I assign my students practice beyond the recommended AP Writing Practice packs?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Can I assign my students practice beyond the recommended AP Writing Practice packs?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="15"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    It is recommended that you and your students create free accounts on Quill.org. Creating an account will give you access to the Survey and its recommended practice. Creating an account also allows you to track your students’ progress and view data reports. You can create an account by visiting the 
                    <a
                      href="https://www.quill.org/account/new"
                    >
                      Quill sign-up page
                    </a>
                    .
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    If you do not want to create an account, you or your students can complete the Survey 
                    <a
                      href="https://diagnostic.quill.org/#/play/diagnostic/-L_wPCxbrT6toCb1fnYR?anonymous=true"
                    >
                      here
                    </a>
                    . However, please note that if you do not create an account, your students’ performance on the Survey will not be saved or shared with you, and you will not have access to the recommended skills practice. You will also not be able to track student progress or view data reports.
                  </p>
                </div>,
                "question": "Do I need to create an account on Quill.org to assign the AP Writing Skills Survey?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Do I need to create an account on Quill.org to assign the AP Writing Skills Survey?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="16"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      <a
                        href="https://www.quill.org/teacher-center"
                      >
                        Teacher Center:
                      </a>
                    </strong>
                     Browse additional resources and more information about how to use Quill.
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      Quill Support:
                    </strong>
                     Email 
                    <a
                      href="mailto:support@quill.org"
                    >
                      support@quill.org
                    </a>
                     (Be sure to mention that you’re an AP teacher!
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      Quill Support Chat:
                    </strong>
                     While you’re on Quill.org, you can use the chat bubble in the lower right side of your screen to connect with a member of the Quill support team. (Again, be sure to mention that you’re an AP teacher!)
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      Quill Instructional Coach:
                    </strong>
                     You can reach out directly to Sherry Lewkowicz, one of our Senior Instructional Coaches focused on Quill’s work with the College Board, at 
                    <a
                      href="mailto:sherry@quill.org"
                    >
                      sherry@quill.org
                    </a>
                     (Again, be sure to mention that you’re an AP teacher!)
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      Quill Phone Number:
                    </strong>
                     (510) 671-0222
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    We are always happy to help!
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    AP® is a registered trademark of the College Board.
                  </p>
                </div>,
                "question": "What if I still have questions?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What if I still have questions?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <a
            className="support-link hidden"
            href=""
          >
            View all questions and answers
          </a>
        </div>
      </div>
    </QuestionsAndAnswers>
  </div>
</Ap>
`;

exports[`Ap component should render when it is part of the assignment flow 1`] = `
<Ap
  isPartOfAssignmentFlow={true}
>
  <div
    className="pre-ap-container"
  >
    <div
      className="section-wrapper"
    >
      <div
        className="container pre-ap-header-container"
      >
        <div
          className="header-left"
        >
          <div
            className="logo-container"
          >
            <img
              alt="College Board logo"
              src="https://assets.quill.org/images/college_board/college-board-logo.svg"
            />
            <div
              className="divider"
            />
            <img
              alt="Quill logo"
              src="https://assets.quill.org/images/logos/quill-logo-green.svg"
            />
          </div>
          <div
            className="header-text-container"
          >
            <h1>
              Official AP Writing Practice
            </h1>
            <p>
              Free AP® writing practice with comprehensive progress reports for you and immediate feedback for students that guides them towards mastery of sentence-level skills.
            </p>
          </div>
        </div>
        <img
          alt="Photograph of a teacher talking to a classroom of high school students"
          src="https://assets.quill.org/images/college_board/teaching-english-practice.png"
        />
      </div>
    </div>
    <div
      className="white-section-wrapper"
    >
      <div
        className="container pre-ap-activities-section"
      >
        <div
          className="header"
        >
          <img
            alt="Illustration of a pencil drawing a line"
            src="https://assets.quill.org/images/college_board/sentence-writing-pencil.svg"
          />
          <div
            className="text-container"
          >
            <h2>
              Sentence-Level Writing Practice
            </h2>
            <p>
              Identify which sentence-level skills your students need to practice with the AP Writing Skills Surveys. Then, assign activities recommended for each student based on their survey responses so they can practice and improve their proficiency with those skills.
            </p>
          </div>
        </div>
        <div
          className="activities-subheader"
        >
          <h2>
            AP Writing Skills Surveys
          </h2>
          <div
            className="ap-english-tag"
          >
            For All AP students
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <a
              className="activity-header"
              id="writing-skills-survey"
            >
              AP Writing Skills Survey
            </a>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/193?college-board=ap"
              rel="noopener noreferrer"
              target=""
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a seventeen-item survey to gauge their understanding of key writing skills that are essential to successful AP- and SAT-level writing. After students complete the survey, Quill will automatically recommend up to seven activity packs for each student based on their needs. Each pack contains a series of activities that each take about 15 minutes to complete and provide scaffolded, sequenced practice with one of the skills covered by the survey.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Complex Sentences; relative clauses; appositive phrases; participial phrases; parallel structure; compound-complex sentences; advanced combining
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="white-section-wrapper"
      id="info-blurbs-1-wrapper"
    >
      <div
        className="container info-blurbs-section"
      >
        <div
          className="info-blurb-container"
        >
          <img
            alt="A recommended activity pack report showing four students being recommended a mixture of activities for relative clauses and participial phrases."
            src="https://assets.quill.org/images/college_board/ap-recommendations.svg"
          />
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Personalized Recommendations
            </p>
            <p
              className="info-blurb-text"
            >
              After students complete the AP Writing Skills Survey, you'll receive recommendations for each student based on their responses and tailored to their individual needs. Each student will be recommended up to 45 sentence combining activities, grouped by concept into seven packs, that provide meaningful, targeted practice. You can assign all the activities with one click, or you can pick and choose.
            </p>
          </div>
        </div>
        <div
          className="info-blurb-container"
        >
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Writing with Targeted Feedback
            </p>
            <p
              className="info-blurb-text"
            >
              Students receive immediate feedback that guides them through the revision process, pushing them to think critically about their writing and make revisions that ultimately lead to strong, sophisticated, and grammatically accurate sentences. The feedback inspires students to strengthen their sentence structure, but also supports them in editing for mechanics such as punctuation and spelling.
            </p>
          </div>
          <img
            alt="An illustration showing a student combining two sentences, getting feedback from Quill, and then getting a correct response."
            src="https://assets.quill.org/images/college_board/ap-additional-practice.svg"
          />
        </div>
        <div
          className="info-blurb-container"
        >
          <img
            alt="A report showing that a student scored 79% on parallel structure, 98% on parallel structure with joining words, and 58% on advanced parallel structure."
            src="https://assets.quill.org/images/college_board/ap-reports.svg"
          />
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Data Reports
            </p>
            <p
              className="info-blurb-text"
            >
              You can monitor the progress of your students and continue to identify areas of need and areas of strength through multiple data reports. Use the analysis report to review your students' work sentence-by-sentence, or use the summary report to get a high-level sense of where your students could use some extra support.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="section-wrapper"
    >
      <div
        className="container cb-message-container"
      >
        <p
          className="cb-message-header"
        >
          Quill and College Board have partnered to provide students with meaningful practice of their sentence-level writing skills.
        </p>
        <div
          className="sub-header-container"
        >
          <p
            className="cb-message-sub-header"
          >
            Message from College Board
          </p>
        </div>
        <div
          className="quote-container"
        >
          <img
            id="first-quote"
            src="https://assets.quill.org/images/college_board/exaggerated-quote-left.svg"
          />
          <div
            className="inner-text-container"
          >
            <p>
              Teaching writing is hard. Even harder can be attempting to pinpoint exactly when we learned how and why to write clearly. That’s why the College Board has worked with Quill.org to ensure that this new, free, comprehensive offering helps students practice targeted sentence construction skills in their writing. Sustained practice and exposure to targeted skills is important to improvement and comfort.
            </p>
            <p>
              Teaching writing may always be hard, but student practice in meaningful skills can make the learning that much clearer. Through this practice, students can begin to own the how and why of their writing.
            </p>
          </div>
          <img
            id="second-quote"
            src="https://assets.quill.org/images/college_board/exaggerated-quote-right.svg"
          />
        </div>
      </div>
    </div>
    <QuestionsAndAnswers
      questionsAndAnswersFile="ap"
      supportLink=""
    >
      <div
        id="q-and-a"
      >
        <div
          className="q-and-a-inner-wrapper"
        >
          <h1>
            Questions and Answers
          </h1>
          <QuestionAndAnswer
            key="0"
            qa={
              Object {
                "answer": <p>
                  The AP Writing Skills Survey is a survey with 17 questions on a range of writing skills. The questions ask students to combine sentences, sometimes with a direction to use a specific strategy, and sometimes without any direction (other than to combine).
                </p>,
                "question": "What is the AP Writing Skills Survey?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What is the AP Writing Skills Survey?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="1"
            qa={
              Object {
                "answer": <p>
                  The Survey assesses students’ proficiency in constructing sentences with relative clauses, appositive phrases, participial phrases, and parallel structure, as well as their general ability to do advanced sentence combining, and to write complex and compound-complex sentences.
                </p>,
                "question": "What does the Survey assess?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What does the Survey assess?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="2"
            qa={
              Object {
                "answer": <p
                  className="preap-q-and-a-text"
                >
                  Quill.org worked with the 
                  <a
                    href="https://www.collegeboard.org/"
                  >
                    College Board
                  </a>
                   to develop this Survey and the AP Writing Practice activity packs that will be recommended based on your students' performance.
                </p>,
                "question": "Who developed the AP Writing Skills Survey?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Who developed the AP Writing Skills Survey?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="3"
            qa={
              Object {
                "answer": <p>
                  The Survey was designed for students in 
                  <a
                    href="https://apcentral.collegeboard.org/courses/ap-course-audit/explore-by-role/teachers"
                  >
                    Advanced Placement
                  </a>
                   courses. Please note, however, that students' performance on the Survey will only be recorded if it is assigned to them by their teacher.
                </p>,
                "question": "Who is the Survey for?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Who is the Survey for?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="4"
            qa={
              Object {
                "answer": <p>
                  The Survey contains 17 questions and is designed to take about 30 minutes for students to complete.
                </p>,
                "question": "How long does the Survey take?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  How long does the Survey take?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="5"
            qa={
              Object {
                "answer": <p>
                  After you have assigned the Survey and your students have completed it, Quill will show you how your students performed and provide recommendations of personalized practice activities you can digitally assign to students who need further skill development. 
                  <a
                    href="https://support.quill.org/en/articles/1589522-how-do-i-assign-diagnostic-recommendations"
                  >
                    This article
                  </a>
                   explains how to find and assign those recommendations.
                </p>,
                "question": "What happens after I assign the Survey and my students complete it?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What happens after I assign the Survey and my students complete it?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="6"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Depending on their performance, students will be recommended some or all of the following AP Writing Practice packs. The packs provide practice through 
                    <a
                      href="https://www.quill.org/tools/connect"
                    >
                      Quill Connect
                    </a>
                    , 
                    <a
                      href="https://www.quill.org/teacher-center/-3"
                    >
                      Quill's sentence combining tool
                    </a>
                    . With the exception of the 
                    <a
                      href="https://www.quill.org/activities/packs/142"
                    >
                      AP Writing - Advanced Sentence Combining pack
                    </a>
                    , the activities in each pack are scaffolded to build in complexity. Here are descriptions of the packs:
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/139"
                    >
                      Complex Sentences
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice constructing complex sentences using subordinating conjunctions, such as even though, after, while, and because. Students also practice identifying time order, opposition, and cause/effect relationships.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/140"
                    >
                      Relative Clauses
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students begin by using a provided relative pronoun, then progress to choosing between who, that, or which.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/143"
                    >
                      Appositive Phrases
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice describing nouns using appositive phrases at the beginning, middle, and end of sentences.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/144"
                    >
                      Participial Phrases
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice constructing sentences with -ing and -ed participial phrases at the beginning, middle, or end.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/192"
                    >
                      Parallel Structure
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice constructing sentences in parallel structure with correlative conjunctions like either/or, neither/nor, and both/and, and with subordinating conjunctions like although, because, and when. Students also practice constructing sentences with parallel clauses.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/141"
                    >
                      Compound-Complex Sentences
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students practice constructing compound sentences with and, or, but, and so. Students also practice constructing complex sentences with subordinating conjunctions such as even though, after, while, and because. Finally, students practice constructing compound-complex sentences with coordinating and subordinating conjunctions. Students also practice identifying time order, opposition, and cause/effect relationships.
                  </p>
                  <p
                    className="preap-sub-header"
                  >
                    AP Writing Practice - 
                    <a
                      href="https://www.quill.org/activities/packs/142"
                    >
                      Advanced Combining
                    </a>
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Students apply their knowledge of multiple sentence structures to combine the sentences in the strongest way possible. Students practice constructing compound and complex sentences, using modifying phrases and clauses, and combining predicates.
                  </p>
                </div>,
                "question": "What kind of activities will be recommended to my students after they take the AP Writing Skills Survey?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What kind of activities will be recommended to my students after they take the AP Writing Skills Survey?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="7"
            qa={
              Object {
                "answer": <p>
                  Yes! From anywhere and at any time! Again though, please note that recommendations of the AP Writing Packs are generated after students complete the AP Writing Skills Survey. Please also note that students' performance on the AP Writing Practice packs will only be recorded if they are assigned to them by their teacher.
                </p>,
                "question": "Can students complete the AP Writing Practice packs independently?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Can students complete the AP Writing Practice packs independently?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="8"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    All of the above packs contain between 4 and 7 activities, each of which are designed to take between 10 and 15 minutes each.
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    The only exception is the 
                    <a
                      href="https://www.quill.org/activities/packs/142"
                    >
                      AP Writing - Advanced Combining pack
                    </a>
                    , which contains 15 activities. This pack contains more activities than the others as it was designed to serve as a large bank of activities for students who perform well on the Survey and don’t get a lot of recommendations. This way, you can still assign these students activities, which are quite challenging and will sustain them for a while. These are great for students who have had success with individual practice of strategies covered in the Survey, and would benefit from an opportunity to apply those strategies in combining activities without suggestions or direction.
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Teacher Tip: When you select a recommended pack, you can 
                    <a
                      href="https://support.quill.org/en/articles/1137376-can-i-remove-activities-or-assignments-from-my-activity-packs"
                    >
                      remove any activities within it
                    </a>
                    . And once it's assigned, you can add activities to the pack as well.
                  </p>
                </div>,
                "question": "How many activities are in each AP Writing Practice pack and how long will it take students to complete them?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  How many activities are in each AP Writing Practice pack and how long will it take students to complete them?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="9"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    The focus in most of these activities is to build the target skill of the pack (appositives, relative clauses, etc.), so the vocabulary and reading level are intentionally designed to be accessible by all students.
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    Teacher Tip: You can preview and play through any pack and its activities to get a sense of whether it's appropriate for your students.
                  </p>
                </div>,
                "question": "What grade-level or reading level are the AP Activity Packs designed for?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What grade-level or reading level are the AP Activity Packs designed for?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="10"
            qa={
              Object {
                "answer": "Yes! In each recommended practice activity, Quill provides students with immediate feedback on their writing that they can use to revise their responses up to 5 times. Through these rounds of feedback and revision, students improve the clarity and precision of their writing.",
                "question": "Will my students receive feedback as they work through the AP Writing Practice activity packs?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Will my students receive feedback as they work through the AP Writing Practice activity packs?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="11"
            qa={
              Object {
                "answer": <p>
                  Quill has a variety of reports to help you track your students' performance and progress. In the 
                  <a
                    href="https://support.quill.org/en/articles/1140159-how-does-the-activity-summary-work"
                  >
                    Activity Summary report
                  </a>
                  , you can quickly see which activities your students have completed, along with color-coded icons indicating their proficiency with each activity. Quill has several other reports as well. 
                  <a
                    href="http://s3.amazonaws.com/quill-image-uploads/uploads/files/Quill_Reports_Cheat_Sheet_Updated04_08_20.pdf"
                  >
                    This Cheat Sheet
                  </a>
                   shows you which report to go to for particular information, and 
                  <a
                    href="http://s3.amazonaws.com/quill-image-uploads/uploads/files/Getting_Started_-_Student_Data_Reports__Basic_.mp4"
                  >
                    this video
                  </a>
                   will walk you through interpreting and utilizing three of Quill's student data reports.
                </p>,
                "question": "Where can I track my students' completion of and performance on the AP Writing Practice packs?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Where can I track my students' completion of and performance on the AP Writing Practice packs?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="12"
            qa={
              Object {
                "answer": <p>
                  You can assign all the recommended practice at once, or you can pick and choose the ones that best fit your instructional and students’ needs. Since most of the AP Writing Practice packs contain between 4 and 7 activities, we suggest expecting students to complete about 1 pack a week. 
                  <a
                    href="https://support.quill.org/en/articles/1065187-how-can-i-assign-activities-in-a-specific-order"
                  >
                    This article
                  </a>
                   explains how you can use deadlines to help students pace themselves.
                </p>,
                "question": "How many AP Writing Practice packs should I assign to my students?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  How many AP Writing Practice packs should I assign to my students?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="13"
            qa={
              Object {
                "answer": <p>
                  The activities in the AP Writing Practice packs are curated from existing Quill activities. While your students may encounter an activity they have already completed, the AP Writing Practice packs have been customized to target the skills students need to write successfully at the AP level. Given the quantity and variety of activities available on Quill, chances are that the AP Writing Practice packs will include plenty of new activities, even for students who have been using Quill for a while.
                </p>,
                "question": "If my students have been using Quill for a while, will they encounter activities in the AP Writing Practice packs that they have completed before?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  If my students have been using Quill for a while, will they encounter activities in the AP Writing Practice packs that they have completed before?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="14"
            qa={
              Object {
                "answer": <p>
                  Yes! Quill offers 
                  <a
                    href="https://support.quill.org/en/articles/1327607-what-are-each-of-the-different-quill-tools"
                  >
                    5 different tools
                  </a>
                   with more than 600 writing, grammar, and proofreading activities designed to engage students in the writing process. 
                  <a
                    href="https://support.quill.org/en/articles/1049944-how-do-i-assign-a-featured-activity-pack"
                  >
                    This article
                  </a>
                   will show you how to explore and assign Quill’s featured activity packs, and 
                  <a
                    href="https://support.quill.org/en/articles/1049954-how-do-i-create-and-assign-a-new-activity-pack"
                  >
                    this article
                  </a>
                   will show you how to create a custom activity pack.
                </p>,
                "question": "Can I assign my students practice beyond the recommended AP Writing Practice packs?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Can I assign my students practice beyond the recommended AP Writing Practice packs?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="15"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    It is recommended that you and your students create free accounts on Quill.org. Creating an account will give you access to the Survey and its recommended practice. Creating an account also allows you to track your students’ progress and view data reports. You can create an account by visiting the 
                    <a
                      href="https://www.quill.org/account/new"
                    >
                      Quill sign-up page
                    </a>
                    .
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    If you do not want to create an account, you or your students can complete the Survey 
                    <a
                      href="https://diagnostic.quill.org/#/play/diagnostic/-L_wPCxbrT6toCb1fnYR?anonymous=true"
                    >
                      here
                    </a>
                    . However, please note that if you do not create an account, your students’ performance on the Survey will not be saved or shared with you, and you will not have access to the recommended skills practice. You will also not be able to track student progress or view data reports.
                  </p>
                </div>,
                "question": "Do I need to create an account on Quill.org to assign the AP Writing Skills Survey?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Do I need to create an account on Quill.org to assign the AP Writing Skills Survey?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="16"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      <a
                        href="https://www.quill.org/teacher-center"
                      >
                        Teacher Center:
                      </a>
                    </strong>
                     Browse additional resources and more information about how to use Quill.
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      Quill Support:
                    </strong>
                     Email 
                    <a
                      href="mailto:support@quill.org"
                    >
                      support@quill.org
                    </a>
                     (Be sure to mention that you’re an AP teacher!
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      Quill Support Chat:
                    </strong>
                     While you’re on Quill.org, you can use the chat bubble in the lower right side of your screen to connect with a member of the Quill support team. (Again, be sure to mention that you’re an AP teacher!)
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      Quill Instructional Coach:
                    </strong>
                     You can reach out directly to Sherry Lewkowicz, one of our Senior Instructional Coaches focused on Quill’s work with the College Board, at 
                    <a
                      href="mailto:sherry@quill.org"
                    >
                      sherry@quill.org
                    </a>
                     (Again, be sure to mention that you’re an AP teacher!)
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    <strong>
                      Quill Phone Number:
                    </strong>
                     (510) 671-0222
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    We are always happy to help!
                  </p>
                  <p
                    className="preap-q-and-a-text"
                  >
                    AP® is a registered trademark of the College Board.
                  </p>
                </div>,
                "question": "What if I still have questions?",
              }
            }
            questionsAndAnswersFile="ap"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What if I still have questions?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <a
            className="support-link hidden"
            href=""
          >
            View all questions and answers
          </a>
        </div>
      </div>
    </QuestionsAndAnswers>
  </div>
</Ap>
`;
